--- a/app/src/main/res/layout/tictactoe.xml
+++ b/app/src/main/res/layout/tictactoe.xml
@@ -10,25 +10,28 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center_horizontal"
-    tools:context="com.acme.tictactoe.controller.TicTacToeActivity">
+    tools:context=".mvc.controller.TicTacToeActivity">
 
     <GridLayout
         android:id="@+id/buttonGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="3"
-        android:rowCount="3">
+        android:rowCount="3"
+        >
 
         <Button
             android:tag="00"
             android:onClick="onCellClicked"
             style="@style/tictactoebutton"
+            tools:text="X"
             />
 
         <Button
             android:tag="01"
             android:onClick="onCellClicked"
             style="@style/tictactoebutton"
+            tools:text="O"
             />
 
         <Button
@@ -82,7 +85,6 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="visible"
         >
 
         <TextView
@@ -97,7 +99,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            android:text="@string/winner" />
+            android:text="@string/winner"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/playerTurnViewGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/playerTurnLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:layout_margin="20dp"
+            tools:text="X" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/your_turn"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/gameOverViewGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/gameOverLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="20dp"
+            android:text="@string/game_over" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="@string/press_reset" />
+            />
 
     </LinearLayout>
 
