--- a/app/src/main/res/layout/mvvm_tictactoe.xml
+++ b/app/src/main/res/layout/mvvm_tictactoe.xml
@@ -29,47 +29,47 @@
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(0,0)}"
+                android:onClick='@{() -> myViewModel.onClickCell(0,0)}'
                 android:text='@{myViewModel.cells["00"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(0,1)}"
+                android:onClick='@{() -> myViewModel.onClickCell(0,1)}'
                 android:text='@{myViewModel.cells["01"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(0,2)}"
+                android:onClick='@{() -> myViewModel.onClickCell(0,2)}'
                 android:text='@{myViewModel.cells["02"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(1,0)}"
+                android:onClick='@{() -> myViewModel.onClickCell(1,0)}'
                 android:text='@{myViewModel.cells["10"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(1,1)}"
+                android:onClick='@{() -> myViewModel.onClickCell(1,1)}'
                 android:text='@{myViewModel.cells["11"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(1,2)}"
+                android:onClick='@{() -> myViewModel.onClickCell(1,2)}'
                 android:text='@{myViewModel.cells["12"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(2,0)}"
+                android:onClick='@{() -> myViewModel.onClickCell(2,0)}'
                 android:text='@{myViewModel.cells["20"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(2,1)}"
+                android:onClick='@{() -> myViewModel.onClickCell(2,1)}'
                 android:text='@{myViewModel.cells["21"]}' />
 
             <Button
                 style="@style/tictactoebutton"
-                android:onClick="@{() -> myViewModel.onClickCell(2,2)}"
+                android:onClick='@{() -> myViewModel.onClickCell(2,2)}'
                 android:text='@{myViewModel.cells["22"]}' />
 
         </GridLayout>
@@ -80,7 +80,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="@{myViewModel.winner != null ? View.VISIBLE : View.GONE}"
+            android:visibility='@{myViewModel.winner != null ? View.VISIBLE : View.GONE}'
             >
 
             <TextView
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:textSize="40sp"
-                android:text="@{myViewModel.winner}"
+                android:text='@{myViewModel.winner}'
                 tools:text="X" />
 
             <TextView
@@ -106,7 +106,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="@{myViewModel.currentTurn == null ? View.GONE : View.VISIBLE}"
+            android:visibility='@{myViewModel.currentTurn == null ? View.GONE : View.VISIBLE}'
             tools:visibility="visible"
             >
 
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="40sp"
                 android:layout_margin="20dp"
-                android:text="@{myViewModel.currentTurn}"
+                android:text='@{myViewModel.currentTurn}'
                 tools:text="X" />
 
             <TextView
@@ -133,8 +133,10 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="@{myViewModel.gemeOver != null ? View.VISIBLE : View.GONE}"
+            android:visibility='@{myViewModel.gameOver != null ? View.VISIBLE : View.GONE}'
             >
+            <!--ObservableField<Boolean> gameOverVisibility = new ObservableField<>();-->
+            <!--android:visibility='@{myViewModel.gameOverVisibility ? View.VISIBLE : View.GONE}'-->
 
             <TextView
                 android:id="@+id/gameOverLabel"
