--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">44dp</dimen>
+
+    <dimen name="activity_horizontal_margin_o">0dp</dimen>
+    <dimen name="activity_vertical_margin_o">8dp</dimen>
 </resources>
